--- a/Invisible_hand/Invisible_Hand/templates/dormitory_information.html
+++ b/Invisible_hand/Invisible_Hand/templates/dormitory_information.html
@@ -9,7 +9,11 @@
 <h1>大二课程表</h1>
 <img src="{% static 'images/class_schedule_2.jpg' %}" alt="">
 <h1>大二实验课</h1>
-<img src="{% static 'images/experiment_schedue_2.jpg' %}" alt="">
+<img src="{% static 'images/experiment_schedule_2.jpg' %}" alt="">
+<h1>大一课程表</h1>
+<img src="{% static 'images/class_schedule_1.jpg' %}" alt="">
+<h1>大一实验课</h1>
+<img src="{% static 'images/experiment_schedule_1.jpg' %}" alt="">
 
 
 <form action="/dormitory/input/" method="get">
